# exercises

./: readme.org
aoc/: readme.org
aoc/haskell/: .dir-locals.el  .gitignore  Main.hs  aoc-haskell.cabal  readme.org
aoc/haskell/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
aoc/haskell/test/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Spec.hs
aoc/inputs/2019/: input-day4.txt
aoc/rust/: Cargo.toml
aoc/rust/src/: day1.rs  day2.rs  main.rs
haskell-exercises/: LICENSE  default.nix  haskell-exercises.cabal  hie.yaml  readme.org
haskell-exercises/bench/: BenchAll.hs
haskell-exercises/nix/: sources.json
haskell-exercises/src/AdventOfCode/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
haskell-exercises/src/Common/: Fibonacci.hs  Helpers.hs  Primes.hs
haskell-exercises/src/ProjectEuler/: Problems.hs
haskell-exercises/test/: CommonSpec.hs  Main.hs
haskell-exercises/test/AdventOfCode/: Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs
haskell-exercises/test/ProjectEuler/: ProblemsSpec.hs
rust-aoc-2019/: Cargo.toml
rust-aoc-2019/src/: day1.rs  day2.rs
rust-aoc-2022/: Cargo.toml
rust-aoc-2022/src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  utils.rs
rust-aoc-2025/: Cargo.toml
rust-aoc-2025/src/: main.rs
rust-exercises/: Cargo.toml
