cabal-version:       2.4

name:                haskell-exercises
version:             0.1.0.0
synopsis:            Programming exersices in Haskell
license:             MIT
license-file:        LICENSE
author:              Will Bush
maintainer:          will.g.bush@gmail.com

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:
      Common.Fibonacci
    , ProjectEuler.Problems
    , AdventOfCode.Day1
    , AdventOfCode.Day2
    , AdventOfCode.Day3
    , AdventOfCode.Day4
    , AdventOfCode.Day5
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fplugin=Splint
  build-depends:
      base ^>=4.13.0.0
    , array
    , bytestring
    , containers
    , extra
    , ilist
    , safe
    , utility-ht
    , splint

test-suite haskell-exercises-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fplugin=Splint
  build-depends:
      base ^>=4.13.0.0
    , bytestring
    , containers
    , haskell-exercises
    , hspec
    , safe
    , splint
    , utility-ht
    -- The following three dependencies are only here as a work around to get
    -- ghcide to working until multi-component support is available in ghcide.
    -- see https://github.com/mpickering/hie-bios/issues/190
    , array
    , extra
    , ilist
  other-modules:
      CommonSpec
    , ProjectEuler.ProblemsSpec
    , AdventOfCode.Day1Spec
    , AdventOfCode.Day2Spec
    , AdventOfCode.Day3Spec
    , AdventOfCode.Day4Spec
    , AdventOfCode.Day5Spec

benchmark haskell-exercises-bench
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    bench
  main-is:           BenchAll.hs
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fplugin=Splint
  build-depends:
      base ^>=4.13.0.0
    , criterion
    , haskell-exercises
    , splint
