cabal-version: 2.4

name:          haskell-exercises
version:       0.1.0.0
synopsis:      Programming exersices in Haskell
license:       MIT
license-file:  LICENSE
author:        Will Bush
maintainer:    will.g.bush@gmail.com

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base ^>=4.13.0.0

library
  import: common-settings
  hs-source-dirs: src
  exposed-modules:
      AdventOfCode.Day1
    , AdventOfCode.Day2
    , AdventOfCode.Day3
    , AdventOfCode.Day4
    , AdventOfCode.Day5
    , Common.Fibonacci
    , Common.Helpers
    , Common.Primes
    , ProjectEuler.Problems
  build-depends:
      array
    , bytestring
    , containers
    , extra
    , ilist
    , safe
    , split
    , utility-ht

test-suite haskell-exercises-test
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      bytestring
    , containers
    , haskell-exercises
    , hspec
    , safe
    , utility-ht
  other-modules:
      CommonSpec
    , ProjectEuler.ProblemsSpec
    , AdventOfCode.Day1Spec
    , AdventOfCode.Day2Spec
    , AdventOfCode.Day3Spec
    , AdventOfCode.Day4Spec
    , AdventOfCode.Day5Spec

benchmark haskell-exercises-bench
  import: common-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        BenchAll.hs
  build-depends:
      criterion
    , haskell-exercises
