cabal-version:       2.4

name:                aoc-haskell
version:             0.1.0.0
synopsis:            Advent of Code solutions in Haskell
license:             MIT
license-file:        LICENSE
author:              willbush
maintainer:          will.g.bush@gmail.com

library
  exposed-modules:
    Day1
    Day2
  -- other-modules:
  -- other-extensions:
  build-depends:
      base ^>=4.12.0.0
    , bytestring
    , array
  hs-source-dirs:      src
  default-language:    Haskell2010

executable aoc-haskell
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base ^>=4.12.0.0
    , aoc-haskell
    , bytestring
    , array
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

test-suite aoc-haskell-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base ^>=4.12.0.0
    , aoc-haskell
    , QuickCheck
    , hspec
    , bytestring
    , array