cabal-version: 2.4

name:                aoc-haskell
version:             0.1.0.0
synopsis:            Advent of Code solutions in Haskell
license:             MIT
author:              Will Bush
maintainer:          will.g.bush@gmail.com

library
  exposed-modules:
      Day1
      Day2
      Day3
      Day4
      Day5
  build-depends:
      array
    , base >=4.12.0.0 && <4.13
    , bytestring
    , safe >=0.3.18
    , utility-ht >=0.0.14
    , containers >= 0.6.2.1
    , extra
    , ilist >= 0.3.1.0
  hs-source-dirs:
      src
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  default-language: Haskell2010

executable aoc-haskell-exe
  main-is: Main.hs
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      aoc-haskell
    , array
    , base >=4.12.0.0 && <4.13
    , bytestring
    , safe >=0.3.18
    , utility-ht >=0.0.14
    , containers >= 0.6.2.1
    , extra
    , ilist >= 0.3.1.0
  default-language: Haskell2010

test-suite aoc-haskell-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is: Spec.hs
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      aoc-haskell
    , array
    , base >=4.12.0.0 && <4.13
    , bytestring
    , hspec
    , safe >=0.3.18
    , utility-ht >=0.0.14
    , containers >= 0.6.2.1
    , extra
    , ilist >= 0.3.1.0
  build-tool-depends: hspec-discover:hspec-discover >= 2.7.1